--- a/src/Components/CafeInfo/CafeInfo.module.css
+++ b/src/Components/CafeInfo/CafeInfo.module.css
@@ -21,3 +21,14 @@
   max-width: 600px;
   line-height: 1.6;
 }
+
+.icon {
+  font-size: 45px;
+  padding-bottom: 10px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
